# curves-hierarchy

./: CMakeLists.txt  README.md  main.cpp
lib/: curves_hierarchy.cpp  curves_hierarchy.h
